--- a/pom.xml
+++ b/pom.xml
@@ -5,19 +5,24 @@
 	<groupId>com.helospark</groupId>
 	<artifactId>lightdi-test</artifactId>
 	<version>0.0.2-SNAPSHOT</version>
-	<name>lightdi-test</name>
+	<name>LightDI Test</name>
+	<description>Testing support for LightDI.</description>
+	<url>https://github.com/helospark/lightdi-test</url>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<skipGpgSign>false</skipGpgSign>
 		<skipSourceGeneration>false</skipSourceGeneration>
 		<skipJavadocGeneration>false</skipJavadocGeneration>
+		<skipJacoco>false</skipJacoco>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.helospark</groupId>
 			<artifactId>lightdi</artifactId>
-			<version>0.0.2-SNAPSHOT</version>
+			<version>0.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -32,19 +37,21 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-library</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
 			<version>1.1.7</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.1.7</version>
-		</dependency>
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-library</artifactId>
-			<version>1.3</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -170,6 +177,28 @@
 					<skip>${skipGpgSign}</skip>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<skip>${skipJacoco}</skip>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -189,9 +218,9 @@
 	</developers>
 
 	<scm>
-		<connection>scm:git:git://github.com/helospark/light-di.git</connection>
-		<developerConnection>scm:git:ssh://github.com/helospark/light-di.git</developerConnection>
-		<url>http://github.com/helospark/light-di.git</url>
+		<connection>scm:git:git://github.com/helospark/lightdi-test.git</connection>
+		<developerConnection>scm:git:ssh://github.com/helospark/lightdi-test.git</developerConnection>
+		<url>http://github.com/helospark/lightdi-test.git</url>
 	</scm>
 
 	<distributionManagement>
